# Learning-Django-weatherApp

./: README.md  db.sqlite3  pyproject.toml
WeatherApp/: db.sqlite3
WeatherApp (1)/: settings.py  wsgi.py
WeatherApp/WeatherApp/: asgi.py
WeatherApp/weather/: admin.py  apps.py  views.py
WeatherApp/weather/migrations/: 0001_initial.py
WeatherApp/weather/templates/weather/: index.html
weather/: forms.py  models.py
